refactor: replace String session domain with enum in payment processing services
- Updated services, strategies, and entities to use `CheckoutSessionsDomains` enum instead of String for session domain.
- Improved type safety and eliminated string comparisons across payment processing logic.
- Adjusted method signatures and logic in `PaymentOrchestrator`, session services, and handlers to align with the new enum-based approach.
- Enhanced code readability and robustness.